--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,11 +9,16 @@ body {
   @apply bg-white text-gray-800;
 }
 
-
 @layer base {
   body {
-    font-family: 'Bitter', sans-serif;
+    font-family: "Bitter", sans-serif;
   }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 .lightbox-button {
